--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
-Flask
-boto
-Pillow
+Flask==0.10.1
+Jinja2==2.7.1
+MarkupSafe==0.18
+Pillow==2.2.2
+Werkzeug==0.9.4
+boto==2.21.0
+itsdangerous==0.23
+nose==1.3.0
+wsgiref==0.1.2
