--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ Jinja2==2.7.1
 MarkupSafe==0.18
 Pillow==2.2.2
 Werkzeug==0.9.4
-boto==2.21.0
 itsdangerous==0.23
 nose==1.3.0
-wsgiref==0.1.2
+py==1.4.19
+tinys3==0.1.9
+tox==1.6.1
+virtualenv==1.10.1
