--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,12 @@ Jinja2==2.7.1
 MarkupSafe==0.18
 Pillow==2.2.2
 Werkzeug==0.9.4
+flexmock==0.9.7
+futures==2.1.5
 itsdangerous==0.23
 nose==1.3.0
 py==1.4.19
-tinys3==0.1.9
+requests==2.1.0
+git+git://github.com/smore-inc/tinys3.git@813b3a77107106a4a9020919e549ce1c0b87b3eb#egg=tinys3
 tox==1.6.1
 virtualenv==1.10.1
