simplify installation a bit

--- a/etc/upstart.conf
+++ b/etc/upstart.conf
@@ -6,6 +6,6 @@ respawn
 console log
 setuid nobody
 setgid nogroup
-chdir /home/ubuntu/giraffe
+chdir /opt/app
 
-exec /home/ubuntu/giraffe/app.sh /home/ubuntu/.virtualenvs/giraffe
+exec /opt/app/app.sh
