--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ python:
   - "pypy"
 # command to install dependencies
 install:
-  - if [[ $TRAVIS_PYTHON_VERSION = 'pypy' ]]; then grep -v ^gevent requirements.txt > requirements.txt; fi
-  - pip install -r requirements.txt
+  - if [[ $TRAVIS_PYTHON_VERSION = 'pypy' ]]; then grep -v ^gevent requirements.txt > requirements.pypy.txt; fi
+  - if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then pip install -r requirements.txt; fi
+  - if [[ $TRAVIS_PYTHON_VERSION = 'pypy' ]]; then pip install -r requirements.pypy.txt fi
+
 # command to run tests
 script: nosetests
