--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 install:
   - if [[ $TRAVIS_PYTHON_VERSION = 'pypy' ]]; then grep -v ^gevent requirements.txt > requirements.pypy.txt; fi
   - if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then pip install -r requirements.txt; fi
-  - if [[ $TRAVIS_PYTHON_VERSION = 'pypy' ]]; then pip install -r requirements.pypy.txt fi
+  - if [[ $TRAVIS_PYTHON_VERSION = 'pypy' ]]; then pip install -r requirements.pypy.txt; fi
 
 # command to run tests
 script: nosetests
