--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ dogpile.core==0.4.1
 dogpile.cache==0.5.2
 flexmock==0.9.7
 futures==2.1.5
-gevent
+gevent==1.0.1
 gunicorn==18.0
 python-binary-memcached
 itsdangerous==0.23
@@ -19,4 +19,3 @@ requests==2.1.0
 git+git://github.com/smore-inc/tinys3.git@813b3a77107106a4a9020919e549ce1c0b87b3eb#egg=tinys3
 tox==1.6.1
 virtualenv==1.10.1
-
