--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==0.10.1
 Jinja2==2.7.1
 MarkupSafe==0.18
+Pillow==2.4.0
 Wand==0.3.7
 Werkzeug==0.9.4
 dogpile.core==0.4.1
@@ -8,13 +9,14 @@ dogpile.cache==0.5.2
 flexmock==0.9.7
 futures==2.1.5
 gevent==1.0.1
+greenlet==0.4.2
 gunicorn==18.0
-python-binary-memcached
 itsdangerous==0.23
 mock==1.0.1
 newrelic==2.8.0.7
 nose==1.3.0
 py==1.4.19
+python-binary-memcached==0.24.2
 requests==2.1.0
 git+git://github.com/smore-inc/tinys3.git@813b3a77107106a4a9020919e549ce1c0b87b3eb#egg=tinys3
 tox==1.6.1
