--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ dogpile.cache==0.5.2
 flexmock==0.9.7
 futures==2.1.5
 gevent==1.0.1
-greenlet==0.4.2
+greenlet==0.4.4
 gunicorn==18.0
 itsdangerous==0.23
 mock==1.0.1
@@ -18,6 +18,7 @@ nose==1.3.0
 py==1.4.19
 python-binary-memcached==0.24.2
 requests==2.1.0
+six==1.8.0
 git+git://github.com/smore-inc/tinys3.git@813b3a77107106a4a9020919e549ce1c0b87b3eb#egg=tinys3
 tox==1.6.1
 virtualenv==1.10.1
