--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ hammock = "^0.2.4"
 mock = "^5.2.0"
 pytest-asyncio = "^1.0.0"
 httpx = "^0.28.1"
+flake8 = "^7.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
